--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -43,6 +43,18 @@
 <button></button>
 <script>
 
+  const divs = document.querySelectorAll('div');
+
+  function logText(e) {
+      console.log(this.classList.value);
+     // e.stopPropagation(); //stop bubbling!
+  }
+
+  divs.forEach(div => div.addEventListener('click', logText, {
+    capture: false,
+    once: true // if you only want them to click something once, this is what to use! example: store checkout
+  }));
+
 </script>
 </body>
 </html>
