--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -46,6 +46,14 @@
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+    const index = comments.findIndex(comment => comment.id === 823423);
+    console.log(index);
+
+    const newComments = [
+      ...comments.slice(0, index), //if we don't ...spread, it will create 2 different arrays
+      ...comments.slice(index + 1) //another way to do it is with comments.splice(index, 1) 
+    ];
+
   </script>
 </body>
 </html>
